# node_audio

./: .gitignore  BrigeTest.json  HELP.md  README.md  additional_requirements.txt  app_controller.py  bridge_test_1.json  constants.py  downloader.py  engine.py  environment.yml  ffi_node.py  graph_scene.py  graph_view.py  main.py  node_helpers.py  node_system.py  plugin_guide.md  plugin_loader.py  pyproject.toml  requirements.txt  resampler.py  start-windows.bat  start.sh  ui_elements.py  ui_icons.py
additional_plugins/: advanced_sampler.py  audio_device_nodes.py  audio_file_player.py  audio_file_writer.py  autogain.py  compiled_delay.py  compiled_modulation_fx.py  compressor.py  compressor_cpp.py  convolution_reverb.py  delay.py  envelope_follower.py  fir_filters.py  formant_shifter.py  formant_shifter_advanced.py  generators_noise.py  generators_oscillator.py  generators_physical_modeling.py  harmonic_pitch_shifter.py  iir_filters.py  limiter.py  metronome.py  midi_device_nodes.py  midi_keyboard.py  modulation_adsr.py  modulation_effects.py  modulation_fx.py  modulation_lfo.py  nam.py  network_bridge.py  neural_amp.py  neural_amp_cpp.py  panner.py  pitch_and_format_shifter.py  programmable_node.py  rubberband_pitch_shifter.py  rvc_content_encoder.py  rvc_onnx_inference.py  rvc_pitch.py  rvc_unified.py  (+21 more)
cpp/: CMakeLists.txt  compressor_processor.cpp  delay_processor.cpp  gain_processor.cpp  modulation_processor.cpp  nam_processor.cpp  neural_amp_processor.cpp
plugins/: audio_device_nodes.py  audio_file_player.py  audio_io.py  channel.py  compiled_gain.py  convolution_reverb.py  gain.py  generators.py  generators_noise.py  generators_oscillator.py  math.py  midi_device_nodes.py  modulation.py  sampler.py  spectral_effects.py  spectral_processing.py  utility.py  visualization_data_display.py  visualization_spectrum.py  visualization_waveform.py
vst_bridge/: .gitignore  Cargo.toml  README.md  osx_setup.sh  windows_setup.bat
vst_bridge/node_audio_vst_fx/: Cargo.toml
vst_bridge/node_audio_vst_fx/src/: lib.rs
vst_bridge/node_audio_vst_instrument/: Cargo.toml
vst_bridge/node_audio_vst_instrument/src/: lib.rs
vst_bridge/xtask/: Cargo.toml
vst_bridge/xtask/src/: main.rs
